--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,7 +38,7 @@ test:
 publish:
   stage: publish
   only:
-    - master
+    - develop
     - tags
   tags:
     - docker
@@ -50,7 +50,7 @@ publish:
 acceptance:
   stage: acceptance
   only:
-    - master
+    - develop
     - tags
   tags:
     - docker-compose
@@ -65,7 +65,8 @@ acceptance:
 acceptance:branches:
   stage: acceptance
   except:
-    - master
+    - develop
+    - main
     - tags
   tags:
     - docker-compose
@@ -83,7 +84,7 @@ deploy:
   tags:
     - kubectl
   only:
-    - master
+    - develop
     - tags
   dependencies: []
   script:
