--- a/ci/docker-compose.yml
+++ b/ci/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.4"
 
 services:
   postgres:
-    image: postgres:12.5-alpine
+    image: postgres:17-alpine
     environment:
       POSTGRES_PASSWORD: postgres
     restart: always
@@ -29,8 +29,8 @@ services:
     command: ci/build.sh
     environment:
       APP_VERSION: "${APP_VERSION}"
-      HOME: /tmp # CURRENT_UID doesn't have a home
-      MIX_ENV: prod
+      HOME: /tmp
+      MIX_ENV: test
       MIX_HOME: /code/.mix
     user: ${CURRENT_UID-0:0}
     working_dir: /code
@@ -41,7 +41,7 @@ services:
     image: bluetab/elixir:1.18.1-otp-27-alpine-20250107094535
     command: ci/test.sh
     environment:
-      HOME: /tmp # CURRENT_UID doesn't have a home
+      HOME: /tmp
       MIX_ENV: test
       MIX_HOME: /code/.mix
     working_dir: /code
@@ -51,6 +51,32 @@ services:
     depends_on:
       - postgres
       - redis
+
+  sobelow:
+    image: bluetab/elixir:1.18.1-otp-27-alpine-20250107094535
+    command: ci/sobelow.sh
+    environment:
+      APP_VERSION: "${APP_VERSION}"
+      HOME: /tmp
+      MIX_ENV: test
+      MIX_HOME: /code/.mix
+    user: ${CURRENT_UID-0:0}
+    working_dir: /code
+    volumes:
+      - "${CI_PROJECT_DIR}:/code"
+
+  release:
+    image: bluetab/elixir:1.18.1-otp-27-alpine-20250107094535
+    command: ci/release.sh
+    environment:
+      APP_VERSION: "${APP_VERSION}"
+      HOME: /tmp
+      MIX_ENV: prod
+      MIX_HOME: /code/.mix
+    user: ${CURRENT_UID-0:0}
+    working_dir: /code
+    volumes:
+      - "${CI_PROJECT_DIR}:/code"
 
   service:
     image: ${ECR}/${ECR_NAMESPACE}/${CI_PROJECT_NAME}:${APP_VERSION}
